# Patience

./: .gitignore  CMakeLists.txt  README.md  run_adam_patience_replay.py  run_beta_sensitivity_matrix.py
datasets/mnist/: README.md  mnist_query_1k.fvecs
examples/: all_graphs_metrics.cpp  hnsw_demo.cpp
experiments/: mnist_hnsw.cpp
include/: graph_search.hpp  patience.hpp
results/mnist_hnsw_m4_efc50_efs30/: README.md  recall_090_cost.csv  selected_query_ids.csv
results/mnist_hnsw_m6_efc50/: README.md  recall_090_cost.csv  recall_095_cost.csv  recall_097_cost.csv  selected_query_ids.csv
src/: graph_search.cpp  patience.cpp
tests/: test_graph_matrix.cpp  test_patience.cpp  test_patience.py
